@@ -91,6 +91,20 @@ bool AlarmSettings::equalsAutogeneratedAlarm( const AlarmSettings& other ) {
     return alarmFilter == other.filter;
 }
 
+bool AlarmSettings::isOneTimeAlarm() const
+{
+    return type == AlarmRemoveAfterFirstMatch || filter.isOneTimeFilter();
+}
+
+bool AlarmSettings::isExpired() const
+{
+    if ( !isOneTimeAlarm() ) {
+        return false;
+    }
+
+    return filter.isExpired();
+}
+
 QStringList AlarmSettingsList::names() const {
     QStringList ret;
     foreach ( const AlarmSettings &alarmSettings, *this ) {
