@@ -73,6 +73,9 @@ struct AlarmSettings {
      *   filter of this alarm.
      **/
     bool equalsAutogeneratedAlarm( const AlarmSettings &other );
+
+    bool isOneTimeAlarm() const;
+    bool isExpired() const; // only if one time alarm
 };
 bool operator ==( const AlarmSettings &l, const AlarmSettings &r );
 
