@@ -170,7 +170,8 @@ Settings SettingsIO::readSettings( KConfigGroup cg, KConfigGroup cgGlobal,
         }
     }
 
-    // Read alarm settings TODO: Store in config groups like filters
+    // Read alarm settings
+    //   TODO Store in config groups like filters
     int alarmCount = cgGlobal.readEntry( "alarmCount", 0 );
     test = "alarmType";
     i = 1;
@@ -187,7 +188,13 @@ Settings SettingsIO::readSettings( KConfigGroup cg, KConfigGroup cgGlobal,
         alarmSettings.autoGenerated = cgGlobal.readEntry( "alarmAutogenerated" + suffix, false );
         QByteArray baAlarmFilter = cgGlobal.readEntry( "alarmFilter" + suffix, QByteArray() );
         alarmSettings.filter.fromData( baAlarmFilter );
-        settings.alarmSettingsList << alarmSettings;
+
+        // Use date and time of one-time alarms to check if they are expired
+        if ( alarmSettings.isOneTimeAlarm() && alarmSettings.isExpired() ) {
+            kDebug() << "Removing one expired one-time alarm";
+        } else {
+            settings.alarmSettingsList << alarmSettings;
+        }
 
         ++i;
         test = "alarmType_" + QString::number( i );
