@@ -13,6 +13,8 @@ Changelog of plasma-applet-publictransport
 - Add a journey menu, used in several places, with an entry to start a new journey search, entries for favorite/recent journeys and an entry to configure those journeys (in a dialog)
 - Add journey button to the title of the applet (on the left of the filter button), which shows the new journey menu
 
+- Add departure date filter for alarms, this fixes old autogenerated alarms not to be deleted, if the applet was not running when the alarm should have fired
+
 0.10 - RC 2
 - Fix link errors
 - Fix memory leaks
